# Backend/Agent/swagger_server/models/gpt3_request.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class GPT3Request(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, prompt: Object=None):  # noqa: E501
+        """GPT3Request - a model defined in Swagger
+
+        :param prompt: The prompt of this GPT3Request.  # noqa: E501
+        :type prompt: Object
+        """
+        self.swagger_types = {
+            'prompt': Object
+        }
+
+        self.attribute_map = {
+            'prompt': 'prompt'
+        }
+        self._prompt = prompt
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GPT3Request':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GPT3Request of this GPT3Request.  # noqa: E501
+        :rtype: GPT3Request
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def prompt(self) -> Object:
+        """Gets the prompt of this GPT3Request.
+
+        The input prompt for GPT.  # noqa: E501
+
+        :return: The prompt of this GPT3Request.
+        :rtype: Object
+        """
+        return self._prompt
+
+    @prompt.setter
+    def prompt(self, prompt: Object):
+        """Sets the prompt of this GPT3Request.
+
+        The input prompt for GPT.  # noqa: E501
+
+        :param prompt: The prompt of this GPT3Request.
+        :type prompt: Object
+        """
+        if prompt is None:
+            raise ValueError("Invalid value for `prompt`, must not be `None`")  # noqa: E501
+
+        self._prompt = prompt
