# Backend/Agent/swagger_server/models/gpt3_response.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class GPT3Response(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, response: Object=None):  # noqa: E501
+        """GPT3Response - a model defined in Swagger
+
+        :param response: The response of this GPT3Response.  # noqa: E501
+        :type response: Object
+        """
+        self.swagger_types = {
+            'response': Object
+        }
+
+        self.attribute_map = {
+            'response': 'response'
+        }
+        self._response = response
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'GPT3Response':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The GPT3Response of this GPT3Response.  # noqa: E501
+        :rtype: GPT3Response
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def response(self) -> Object:
+        """Gets the response of this GPT3Response.
+
+        The GPT-generated response.  # noqa: E501
+
+        :return: The response of this GPT3Response.
+        :rtype: Object
+        """
+        return self._response
+
+    @response.setter
+    def response(self, response: Object):
+        """Sets the response of this GPT3Response.
+
+        The GPT-generated response.  # noqa: E501
+
+        :param response: The response of this GPT3Response.
+        :type response: Object
+        """
+
+        self._response = response
